--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,6 +8,7 @@
   <body>
     <div class="container text-center">
       <h1>Hello Zoli</h1>
+      <p>Ha nincs adat akkor frissisd az oldalt!</p>
       <table class="table">
         <thead>
           <tr>
